build: Moved the old Dockerfile into the plc4j example section and created a new version, we could use for reproducible releases in the future (Had to update the pom to skip gpg signing, as this doesn't work in Docker)