@@ -60,57 +60,8 @@ RUN chmod +x ./mvnw
 RUN dos2unix ./mvnw
 RUN dos2unix .mvn/wrapper/maven-wrapper.properties
 
-# Tell Maven to fetch all needed dependencies first, so they can get cached
-# (Tried a patched version of the plugin to allow exclusion of inner artifacts.
-# See https://issues.apache.org/jira/browse/MDEP-568 for details)
-RUN ./mvnw -P with-c,with-dotnet,with-go,with-sandbox com.offbytwo.maven.plugins:maven-dependency-plugin:3.1.1.MDEP568:go-offline -DexcludeGroupIds=org.apache.plc4x,org.apache.plc4x.examples,org.apache.plc4x.sandbox
-
 # Build everything with all tests
-RUN ./mvnw -P with-c,with-dotnet,with-go,with-sandbox install
+# (Skip signing, as this requires access to the local GPG keys)
+RUN ./mvnw -Dskip-pgp-signing=true -P with-c,with-dotnet,with-go,with-python,with-sandbox,enable-all-checks,apache-release install
 
-# Get the version of the project and save it in a local file on the container
-RUN ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -Dexpression=project.version -DforceStdout -q -pl . > project_version
-
-##########################################################################################
-# Build a demo container
-##########################################################################################
-
-# Move the file to a place we can reference it from without a version
-RUN PROJECT_VERSION=`cat project_version`; mv plc4j/examples/hello-world-plc4x-read/target/plc4j-examples-hello-world-plc4x-read-${PROJECT_VERSION}-uber-jar.jar plc4xdemo.jar
-
-# Build a highly optimized JRE
-FROM alpine:3.10 as packager
-
-# Install regular JDK
-RUN apk update
-RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
-
-# build minimal JRE
-ENV JAVA_MINIMAL="/opt/java-minimal"
-RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
-    --verbose \
-    --add-modules \
-        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-    --compress 2 --strip-debug --no-header-files --no-man-pages \
-    --release-info="add:IMPLEMENTOR=radistao:IMPLEMENTOR_VERSION=radistao_JRE" \
-    --output "$JAVA_MINIMAL"
-
-# Now create an actual deployment container
-FROM alpine:3.10
-
-# Install our optimized JRE
-ENV JAVA_HOME=/opt/java-minimal
-ENV PATH="$PATH:$JAVA_HOME/bin"
-COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
-
-# Prepare the demo by copying the example artifact from the 'build' container into this new one.
-COPY --from=build /ws/plc4xdemo.jar /plc4xdemo.jar
-
-# Let runtime know which ports we will be listening on
-EXPOSE 9200 9300
-
-# Allow for extra options to be passed to the jar using PLC4X_OPTIONS env variable
-ENV PLC4X_OPTIONS "--connection-string simulated://127.0.0.1 --tag-addresses RANDOM/foo:UDINT"
-
-# This will be executed as soon as the container is started.
-ENTRYPOINT ["sh", "-c", "[ -f /run/plc4xdemo.env ] && . /run/plc4xdemo.env ; java -jar /plc4xdemo.jar $PLC4X_OPTIONS"]
+ENTRYPOINT ["/bin/bash"]
